# pulserecorder

./: README.md  README.rst  pulserecorder.py  pyproject.toml  record_pyaudio.py  record_sounddevice.py
pulserecorder/: __main__.py  audio.py  gui.py
